FIX: hoyre kant pa aktivt fokus border hovedmeny forsvinner * La til 1 i Z-index slik at neste menypunkt ikke legges 'over'

--- a/src/app/components/meny/desktop/hovedMeny.less
+++ b/src/app/components/meny/desktop/hovedMeny.less
@@ -41,6 +41,7 @@
             &.active {
               border-bottom: 4px solid @navBla;
               color: @navMorkGra;
+              z-index: 1;
             }
           }
         }
